# poc_produtitas_faust

./: Dockerfile  README.md  app.py  dataProduct.json  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  start_workers.sh  task.py
core/: app.py
core/utils/: constants.py
core/workers/create_data_product/: consumer.py  controller.py
core/workers/domain_filter/: consumer.py
models/: data_product.py  github.py  log_event.py
services/: aws.py  github.py
src/models/: data_product.py
src/schema/: dataProduct.json  event.json
src/services/: github.py
src/utils/: constants.py
src/workers/: app.py
src/workers/data_product/: consumer.py  controller.py
src/workers/domain_filter/: consumer.py
workers/create_data_product/: consumer.py  controller.py
workers/domain_filter/: consumer.py
